tests/format/typescript/_errors_/invalid-typescript-decorators/enums.ts
// https://github.com/typescript-eslint/typescript-eslint/pull/2375

@decorator()
enum Direction {
               Up = 1,
  Down,
  Left,
  Right
}
